--- a/frontend/vehicle/vehicle.html
+++ b/frontend/vehicle/vehicle.html
@@ -53,34 +53,18 @@
         <div class="car-result">
             <div class="car-list">
                 <div class="single-car-record-panel">
-                    <div class="car-photo-panel">
-                        <img class="car-photo" src="../resources/Cadillac.jpeg" alt="Car Photo" />
-                    </div>
+
                     <div class="car-info-panel">
-                        <div class="car-title">
-                            <p class="car-new-used">Used</p>
-                            <p class="car-year">2017</p>
-                            <p class="car-brand">Ford</p>
-                            <p class="car-model">Focus</p>
-                        </div>
-                        <div class="car-price">
-                            <p class="price">$ 18000 </p>
-                        </div>
-                        <div class="car-color">
-                            <p class="car-exterior-color">Exterior Color: Blue</p>
-                            <p class="car-interior-color">Interior Color: Black</p>
-                        </div>
-                        <div class="car-type">
-                            <p class="car-type-detail">Sedan</p>
-                        </div>
-                        <div class="car-miles">
-                            <p class="car-miles-number">10000 Miles</p>
-                        </div>
+                        <ul class="car-info-panel-list">
+                            
+                        </ul>
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <script src="../util/httpUtil.js"></script>
     <script src="vehicle.js"></script>
 </body>
 
